horizontal scroll with one video fixed

--- a/src/main/js/index.css
+++ b/src/main/js/index.css
@@ -526,6 +526,9 @@ h3 {
     }
 }
 
+div.scroll-horizontal > div {
+    transform: none!important;
+}
 
 .admin-transactions-MDBDataTable {
 	color: white;
